syntax = "proto3";

message Peer {
    bytes publicKey = 1;
    repeated bytes addrs = 2;
    optional AdditionalData data = 3;
    message AdditionalData {
        ServerSettings serverSettings = 1;
        message ServerSettings {
            string name = 1;
            fixed32 maps = 2;
            fixed32 modes = 3;
            uint32 tickRate = 4;
            repeated fixed32 champions = 5;
        }
        repeated GameInfo gameInfos = 2;
        message GameInfo {
            string name = 1;
            uint32 map = 2;
            uint32 mode = 3;
            uint32 players = 5;
            fixed32 features = 6;
        }
    }
}
